src/style.css
* {
  box-sizing: border-box;
  padding: 0;
  margin: 0;
}

header {
  font-family: 'Roboto', sans-serif;
  font-weight: bold;
  position: absolute;
  top: 0;
  width: 100%;
  background-color: rgba(0, 0, 0, 0.8);
}

nav {
  display: flex;
  height: 80px;
  justify-content: center;
  align-items: center;
}

.logo {
  width: 220px;
  height: 50px;
  border-radius: 5px;
}

.nav-options {
  display: flex;
  justify-content: flex-end;
  align-items: center;
  height: 100%;
  width: 70%;
}

.navbar-item {
  color: #fff;
  font-size: 20px;
  margin-right: 30px;
  text-transform: uppercase;
  cursor: pointer;
}

.navbar-item:hover {
  color: #e4a356;
  transform: scale(1.2);
}

#content {
  display: flex;
  justify-content: center;
  align-items: center;
  background: url('./images/hero-image.jpg') center;
  height: 100vh;
  z-index: -1;
}

.main-content {
  width: 90%;
  height: 80%;
}

.home-page {
  color: #fff;
  font-size: 56px;
  text-transform: uppercase;
  text-align: center;
  text-shadow: 3px 3px 15px #000;
  letter-spacing: 0.1rem;
  font-family: 'Anton', sans-serif;
}

.hero-content {
  height: 50%;
}

.location-container {
  position: relative;
  display: inline-block;
  width: 162px;
}

.dropdown-location {
  display: none;
  position: absolute;
  background-color: #f1f1f1;
  min-width: 165px;
  box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
  z-index: 1;
}

.dropdown-location a {
  color: black;
  padding: 12px 16px;
  text-decoration: none;
  display: block;
}

.dropdown-location a:hover {
  background-color: #ddd;
}

.location-container:hover .dropdown-location {
  display: block;
}

.location-btn {
  font-size: 30px;
  text-transform: uppercase;
  padding: 1.1rem 1.5rem;
}

.location-container:hover .location-btn {
  background-color: #b47537;
}

.contact-page,
.menu-page {
  text-transform: uppercase;
  text-align: center;
  letter-spacing: 0.1rem;
  font-family: 'Anton', sans-serif;
}

.contact-page {
  background: #fff !important;
  color: #1c1b21;
}

.menu-page {
  background: #e4a356 !important;
  color: #fff;
}

.title-section {
  font-size: 40px;
  margin: 1rem 0 3rem 0;
}

.form-control {
  margin-bottom: 40px;
}

#input-submit {
  padding: 10px 26px;
  font-size: 20px;
}

.card {
  color: #1c1b21;
  font-family: 'Roboto', sans-serif;
  padding: 0;
  cursor: pointer;
}

@media (min-width: 768px) {
  .contact-form {
    width: 50%;
  }
}

@media (max-width: 767px) {
  .deal {
    margin-top: 2rem;
    align-self: center;
  }
}

@media (max-width: 1023px) {
  .deal {
    max-width: 300px;
    max-height: 300px;
    align-self: top;
  }
}

@media (max-width: 425px) {
  .title-section {
    margin-bottom: 1rem;
    font-size: 26px;
  }

  .navbar-item {
    font-size: 16px;
  }
}

@media (max-width: 581px) {
  nav {
    flex-direction: column;
    height: 100px;
  }

  .nav-options {
    justify-content: space-between;
  }

  .navbar-item {
    margin-right: 0;
  }

  .logo {
    max-width: 160px;
    margin-top: 8px;
  }
}

